tests/snapshots/tui_snapshot_test__tui_snapshots__call_list_timestamp_delta_prev.snap
---
source: tests/tui_snapshot_test.rs
assertion_line: 676
expression: output
---
 Current Mode: Online (any)    Dialogs: 3 (3 displayed)  [A]
 Match Expression:     BPF Filter:
 Time: Delta-first
  # ▲   Metho From To   Source    Destinatio State     Msgs Date   PDD    Durati
> [ ]1  INVIT 1001 1002 10.0.0.1  10.0.0.2   Completed 4    +0.000 1000ms 1m2s
  [ ]2  INVIT 1003 1004 10.0.0.1  10.0.0.2   FAILED    2    +5.000        1.0s
  [ ]3  INVIT 1005 1006 10.0.0.1  10.0.0.2   InCall    2    +10.00        2.0s
















Esc Quit  F1 Help  Enter Show  Tab Streams  F2 Save  F3 Search  F6 Raw  F7 Filte
