tests/snapshots/tui_snapshot_test__tui_snapshots__compare_view.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 3 shown of 3    Autoscroll: on
 Capture filter (BPF): none
 View filter: none
┌ Compare two calls ───────────────────────────────────────────────────────────┐
│  A: call-1@test                                                              │
│  B: call-2@test                                                              │
│                                                                              │
│  State         A: Completed                   B: Failed  (differs)           │
│  Final status  A: 200                         B: 503  (differs)              │
│  Messages      A: 4                           B: 2  (differs)                │
│  Methods       A: BYE,INVITE                  B: INVITE  (differs)           │
│                                                                              │
│  Differences: state, final status, message count, methods                    │
│                                                                              │
│  B hints:                                                                    │
│    - Call failed: 503 Service Unavailable.                                   │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Esc Back  F1 Help  ↑↓ Scroll  PgUp/Dn Page
