tests/snapshots/tui_snapshot_test__tui_snapshots__endpoint_view.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 3 shown of 3    Autoscroll: on
 Capture filter (BPF): none
 View filter: none
┌ Endpoint ────────────────────────────────────────────────────────────────────┐
│Endpoint 10.0.0.1                                                             │
│                                                                              │
│  Dialogs: 3    Messages sent: 4  received: 4                                 │
│                                                                              │
│  By method:   INVITE 3                                                       │
│  By state:    Completed 1, Failed 1, InCall 1                                │
│                                                                              │
│  INVITEs: 3   with final: 3   failed: 1   (33.3% fail)                       │
│                                                                              │
│  Registration: not applicable                                                │
│                                                                              │
│  User-Agent/Server: none seen                                                │
│                                                                              │
│  Streams: none                                                               │
│                                                                              │
│  Recent calls (3 of 3):                                                      │
│    call-1@test                                                               │
│    call-3@test                                                               │
└──────────────────────────────────────────────────────────────────────────────┘
Esc Back  F1 Help  ↑↓ Scroll  PgUp/Dn Page
