tests/snapshots/tui_snapshot_test__tui_snapshots__file_open_popup.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 3 shown of 3    Autoscroll: on
 Capture filter (BPF): none
 View filter: none
  # ▲     Method     From          To            Source       Destination  State        Msgs  +Prev    PDD      Duration
> [ ] 1   INVITE     1001          1002          10.0.0.1     10.0.0.2     Completed    4     +0.000s  1000ms   1m2s
  [ ] 2   INVITE     1003          1004          10.0.0.1     10.0.0.2     FAILED ⚠     2     +5.000s           1.0s
  [ ] 3   INVITE     1005          1006          10.0.0.1     10.0.0.2     InCall       2     +5.000s           2.0s


                    ┌ Open capture file ───────────────────────────────────────────────────────────┐
                    │                                                                              │
                    │  Path: /tmp/test.pcap                                                        │
                    │                                                                              │
                    │  Supports .pcap, .pcapng, .cap files (~ expands to $HOME)                    │
                    │                                                                              │
                    │  [Enter] Open  [Tab] Browse  [Esc] Cancel                                    │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    └──────────────────────────────────────────────────────────────────────────────┘








Enter Open  Tab Browse  Esc Cancel
